# OmegaFold

./: main.py  pyproject.toml
omegafold/: __main__.py  model.py  pipeline.py
omegafold/utils/protein_utils/: residue_constants.py
