[project]
name = "omegafold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "torch",
    "biotite>=1.2.0",
    "numpy<2",
    "torch-xla[tpu]",
    "biopython"
]

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
explicit = true
